# mx-sc-codec-tool

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.cjs  .yarnrc.yml  Cargo.toml  Justfile  README.md  package.json
.husky/: pre-commit
.zed/: settings.json
crates/mx-human-codec/: Cargo.toml
crates/mx-human-codec-wasm/: Cargo.toml
crates/mx-human-codec-wasm/src/: abi.rs  decode.rs  defaults.rs  lib.rs  schema.rs
crates/mx-human-codec/src/: lib.rs  mem.rs
