[package]
name = "mx-human-codec-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.89"
serde_json = "1.0.108"
console_error_panic_hook = "0.1.7"

multiversx-sc-codec-human-readable = { git = "https://github.com/laurci/mx-sdk-rs.git", rev = "5ee275ee62940ef16d9a8ca22ded585f7dff914f" }
multiversx-sc-meta-lib = { git = "https://github.com/laurci/mx-sdk-rs.git", rev = "5ee275ee62940ef16d9a8ca22ded585f7dff914f" }
multiversx-sc = { git = "https://github.com/laurci/mx-sdk-rs.git", rev = "5ee275ee62940ef16d9a8ca22ded585f7dff914f" }

# multiversx-sc-codec-human-readable = { path = "../../../mx-sdk-rs/data/human-readable" }
# multiversx-sc-meta = { path = "../../../mx-sdk-rs/framework/meta" }
# multiversx-sc = { path = "../../../mx-sdk-rs/framework/base" }
